# URL-Shortener

./: .dockerignore  .gitignore  docker-compose.yml  dockerfile  pyproject.toml  readme.md
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 10160f37f432_initial_url_only.py  89b3c5e26b7c_initial_migration.py
app/: index.html  main.py  script.js  style.css
app/caches/: url_cache.py
app/core/: config.py  exception_handlers.py  exceptions.py  middleware.py
app/db/: main.py  url_db.py
app/db/caches/: url_cache.py
app/dependencies/: url_dependency.py  workers_dependency.py
app/models/: url_model.py
app/repositories/: url_cache_repository.py  url_db_repository.py
app/routers/: url_router.py
app/schemas/: url_schema.py
app/services/: url_service.py
app/static/: script.js
app/tasks/: url_db_task.py
app/templates/: index.html
app/workers/: url_clicks.py  url_worker.py
core/: config.py
tests/: conftest.py
tests/db/: url_db.py
tests/fixtures/: url_cache_fixture.py  url_db_fixture.py  url_fixture.py  url_router_fixture.py  url_service_fixture.py
tests/repositories/: test_url_cache_repository.py  test_url_db_repository.py
tests/routers/: test_url_router.py
tests/services/: test_url_service.py
