[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "url-shortener"
version = "0.1.0"
description = "Simple URL shortener built with FastAPI, Postgres and Redis."
readme = "readme.md"
requires-python = ">=3.12"
authors = [
  {name = "Ernest"}
]

dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.136.0",
  "pydantic>=2.13.1",
  "python-dotenv>=1.2.2",
  "redis>=7.4.0",
  "slowapi>=0.1.9",
  "SQLAlchemy>=2.0.49",
  "psycopg2-binary>=2.9.9",
  "uvicorn>=0.27.0"
]

[project.optional-dependencies]

test = [
  "pytest>=9.0.2",
  "testcontainers>=4.14.2",
  "httpx>=0.27.0"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]

testpaths = ["tests"]

addopts = "-ra -q --strict-markers"

markers = [
  "unit: marks tests as unit tests",
  "integration: marks tests as integration tests (requires Docker Testcontainers)"
]

pythonpath = ["."]